Move from equinox.lanuncher/Main to eclipse.osgi/EclipseStarter